Closed
Bug 1367581
Opened 8 years ago
Closed 8 years ago
Downloaded in private browsing mode files from mega.nz showing in main window's downloads list
Categories
(Firefox :: Private Browsing, defect)
Tracking
()
VERIFIED
FIXED
Firefox 55
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox53 | --- | unaffected |
| firefox54 | --- | unaffected |
| firefox55 | + | verified |
People
(Reporter: svanderger, Assigned: allstars.chh)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
1.41 KB,
patch
|
valentin
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64; rv:52.0) Gecko/20100101 Firefox/52.0
Build ID: 20170524030204
Steps to reproduce:
Downloading file from mega.nz.
Actual results:
Downloaded in private browsing mode files from mega.nz showing in main window's downloads list.
Expected results:
Downloaded in private browsing mode files from mega.nz showing in private browsing window's downloads list.
"buildID": "20170524030204"
"userAgent": "Mozilla/5.0 (Windows NT 6.3; Win64; x64; rv:55.0) Gecko/20100101 Firefox/55.0"
When the download has finished, the private download panel displays automatically the download, but if you click on the download arrow, it's empty. And the download is visible in the normal download panel.
regression range:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=37a36d779f8371f5fa607397736d8a4b29db1100&tochange=731dd04cdcef9b60dcadc92e6c9234b016682c35
Yoshi Huang — Bug 1284579 - Part 1:revise NS_UsePrivateBrowsing to get PB from origin attributes. r=valentin
Yoshi, could you check this regression from your patch, please.
Blocks: 1284579
Status: UNCONFIRMED → NEW
Has Regression Range: --- → yes
Has STR: --- → yes
status-firefox53:
--- → unaffected
status-firefox54:
--- → unaffected
status-firefox55:
--- → affected
status-firefox-esr52:
--- → unaffected
tracking-firefox55:
--- → ?
Component: Untriaged → Private Browsing
Ever confirmed: true
Flags: needinfo?(allstars.chh)
Keywords: regression
Product: Core → Firefox
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → allstars.chh
Flags: needinfo?(allstars.chh)
| Assignee | ||
Comment 3•8 years ago
|
||
Is this platform specific? I use Ubuntu however it seems fine.
| Assignee | ||
Comment 4•8 years ago
|
||
(In reply to Yoshi Huang [:allstars.chh] from comment #3)
> Is this platform specific? I use Ubuntu however it seems fine.
Sorry, I reproduced that on my Ubuntu.
(In reply to Yoshi Huang [:allstars.chh] from comment #3)
> Is this platform specific? I use Ubuntu however it seems fine.
No, I think all OSes are affected. I tested on Win 7.
| Assignee | ||
Comment 6•8 years ago
|
||
I found the problem is we bail out early if the channel has no loadInfo in NS_GetOriginAttributes, however in this case the channel is ExternalHelperAppParent and it doesn't have loadinfo, so we didn't get the correct PB value there.
I am trying to have a test here.
| Assignee | ||
Comment 8•8 years ago
|
||
Hi Valentin
Can you review this again? As this is regressed from my previous bug 1284579.
I still need some time to write the test, if I cannot finish it, I'll file another bug for it.
Thanks
Attachment #8874739 -
Flags: review?(valentin.gosu)
Comment 9•8 years ago
|
||
Comment on attachment 8874739 [details] [diff] [review]
Patch.
Review of attachment 8874739 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks!
Attachment #8874739 -
Flags: review?(valentin.gosu) → review+
Comment 10•8 years ago
|
||
Pushed by yhuang@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/1e31507a93b2
don't bail out if the channel doesn't have loadInfo. r=valentin
Comment 11•8 years ago
|
||
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 55
Comment 12•8 years ago
|
||
I have reproduced this bug with Nightly 55.0a1 (2017-05-24) on Windows 8.1 (64 bit).
This bug's fix is verified on Latest Nightly 55.0a1.
Build ID : 20170609030207
User Agent : Mozilla/5.0 (Windows NT 6.3; WOW64; rv:55.0) Gecko/20100101 Firefox/55.0
[bugday-20170607]
Updated•8 years ago
|
Flags: qe-verify+
Comment 13•8 years ago
|
||
I have managed to reproduce the issue described in comment 0 using Firefox 55.0a1 (Build Id:20170524030204).
The issue is verified fixed on Firefox 55.0b3 (BuildId:20170619071723) using Windows 10 64 bit, Ubuntu 16.04 64bit and macOS 10.11.6.
You need to log in
before you can comment on or make changes to this bug.
Description
•