Bug 1367581 - don't bail out if the channel doesn't have loadInfo. r=valentin